# AI-Security-Lab

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py  models.py  report_writer.py  ui.py
app/pages/: __init__.py  advisory_builder.py  checkmk_generator.py  cve_casebook.py  dashboard.py  docker_security.py  learning_path.py  local_runtime_checks.py  nginx_hardening.py  service_discovery.py
checks/checkmk/: ai_runtime_summary.sh  ollama_exposure.sh  open_webui_exposure.sh  vllm_exposure.sh
docs/: checkmk-installation.md  cve-contributor-workflow.md  personal-device-requirements.md  safety-model.md  secure-local-llm-baseline.md  setup.md  threat-model.md
lab_services/mock_ollama/: Dockerfile  app.py
lab_services/mock_open_webui/: Dockerfile  app.py
lab_services/mock_vllm/: Dockerfile  app.py
lab_services/nginx/: hardened.conf  insecure.conf
reports/templates/: cvss-analysis-template.md  cwe-mapping-template.md  executive-summary-template.md  responsible-disclosure-email-template.md  vulnerability-report-template.md
scanners/: __init__.py  docker_check.py  localhost_ports.py  nginx_config_check.py  ollama_check.py  open_webui_check.py  safety.py  vllm_check.py
tests/: test_advisory_export.py  test_localhost_ports.py  test_nginx_config_checker.py  test_report_writer.py  test_safety.py
