[project]
name = "ai-security-lab"
version = "0.1.0"
description = "A local-only AI infrastructure security learning lab."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP", "SIM"]
ignore = ["E741"]

[tool.ruff.lint.isort]
known-first-party = ["app", "scanners"]
